--- a/src/views/home/sections/tracks/Tracks.module.scss
+++ b/src/views/home/sections/tracks/Tracks.module.scss
@@ -85,6 +85,23 @@
   @include mixins.mobile {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+    padding-bottom: 12px;
+    scrollbar-width: thin;
+    scrollbar-color: var(--green-200) var(--green-100);
+
+    &::-webkit-scrollbar {
+      height: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: var(--green-100);
+      border-radius: 100px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: var(--green-200);
+      border-radius: 100px;
+    }
   }
 }
 
